--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "npm": "8.1.2",
+    "node": "16.13.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
